# asset-discovery-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/specs/asset-discovery-bot/: .config.kiro  design.md  requirements.md  tasks.md
bot/: __init__.py  config.py  filters.py  fundamentals.py  log_setup.py  notify.py  prices.py  repo.py  run.py  universe.py
bot/migrations/: 001_init.sql  002_universe_expansion.sql  __init__.py  run_migrations.py
config/: .gitkeep  config.example.yaml
scripts/: _validate_config_task41.py  _validate_filters_task9.py  smoke_config.py
tests/: __init__.py
