[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-discovery-bot"
version = "0.1.0"
description = "Systematic S&P 500 scanner that surfaces value-and-quality candidates with early recovery signals for human review."
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "Proprietary" }
authors = [
    { name = "Asset Discovery Bot Authors" },
]
keywords = ["finance", "equities", "screener", "sp500", "research"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial :: Investment",
    "Private :: Do Not Upload",
]
dependencies = [
    "pandas==2.2.3",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.1.20",
    "yfinance==0.2.50",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "tenacity==8.5.0",
    "pydantic==2.9.2",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "hypothesis==6.115.3",
    "testcontainers[postgres]==4.8.2",
    "responses==0.25.3",
    "ruff==0.7.2",
    "mypy==1.13.0",
]

[tool.setuptools.packages.find]
include = ["bot*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
